# rospi3robot

mpu6050/include/mpu9255/: GyroAccel.h  Mag.h
mpu6050/launch/: rm_mpu6050.launch
mpu6050/src/: GyroAccel.cpp  Mag.cpp  mpu6050_node.cpp
raspicam_node/calibrations/: camera.yaml
rm_head_tracking/: CMakeLists.txt  package.xml
rm_head_tracking/launch/: rm_head_tracking.launch
rm_head_tracking/src/: rm_head_tracking_node.cpp
rm_mpu9255/: rm_mpu9255.files  rm_mpu9255.includes
rm_robot/: CMakeLists.txt  package.xml
rm_robot/cfg/: rm_robot_node.cfg
rm_robot/include/: MyStepperBase.hpp  dbg.h  hw_config.hpp  parameters.h  rm_robot_node.hpp
rm_robot/launch/: rm_robot.launch  rm_robot_full.launch
rm_robot/src/: rm_robot_node.cpp
rm_scan/: CMakeLists.txt  package.xml  usbcam_calibration.xml
rm_scan/launch/: rm_scan.launch
rm_scan/src/: geany_run_script.sh  rm_scan_node.cpp  rm_scan_node.cpp.bad
rm_speech/: CMakeLists.txt  package.xml
rm_speech/launch/: rm_speech.launch
rm_speech/src/: speech.cpp
