<?xml version="1.0"?>
<package>
  <name>rm_head_tracking</name>
  <version>1.0.0</version>
  <description>Robot Head Tracker </description>
  <maintainer email="lcesarini1962@zgmail.com">L Cesarini</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export/>
</package>
