<?xml version="1.0"?>
<package>
  <name>rm_robot</name>
  <version>1.0.0</version>
  <description>Robot control Package</description>
  <maintainer email="lcesarini1962@gmail.com">Luca Cesarini</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>espeak</build_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>espeak</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <export/>
</package>
